# PiEscape

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  PiEscape2.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  benchmarking_main.c  cmake_install.cmake  glmc_demo.vcxproj  glmc_demo.vcxproj.filters  glmc_demo_main.c  lampjes.vcxproj  lampjes.vcxproj.filters  pi_escape2_benchmark.vcxproj  pi_escape2_benchmark.vcxproj.filters  pi_escape2_part1.vcxproj  pi_escape2_part1_benchmark.vcxproj  pi_escape2_part1_benchmark.vcxproj.filters  pi_escape2_part1_main.c  pi_escape2_part2.vcxproj  pi_escape2_part2.vcxproj.filters  pi_escape2_part2_main.cpp  pi_escape2_test.vcxproj  pi_escape2_test.vcxproj.filters  pi_escape2_test_main.c  pulltest.txt  test.txt  useful_links.txt
Debug/: glmc_demo.ilk  lampjes.ilk  pi_escape2_benchmark.ilk  pi_escape2_part1.ilk  pi_escape2_part2.ilk
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
benchmarks/: bench.txt  benchlog.txt  benchmarks.txt
extrafiles/: README.md  Verslag_project_SysteemProgrammeren.docx  jeroenverslag.txt  julesverslag.txt  readme.txt  rubenverslag.txt  thomasverslag.txt  usefullinks.txt
glmc_demo.dir/Debug/glmc_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lampjes.dir/Debug/lampjes.tlog/: custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libraries/RTIMULib/: RTIMUHal.cpp  RTIMULib.ini
libraries/RTIMULib/IMUDrivers/: RTIMU.cpp  RTIMU.h
libraries/glmc/: README.md  license.md
libraries/glmc/include/: glmc.h
libraries/glmc/src/: CMakeList.txt  glmc_matrix.c  glmc_model.c  glmc_vector.c
pi_escape/anim/: Animation.cpp  Animation.h  FontManager.cpp  FontManager.h  GameUICreator.cpp  GameUICreator.h  Menu.cpp  Menu.h  MenuBuilder.cpp  MenuBuilder.h  Movie.cpp  Movie.h  MovieBuilder.cpp  MovieBuilder.h  UI.cpp  UI.h
pi_escape/es/: assemblage.c  assemblage.h  component_enums.h  component_structs.h  context.c  context.h  engine.c  engine.h  entity.h  es_memory_manager.c  es_memory_manager.h  es_memory_manager_collections.c  es_memory_manager_collections.h  game.c  game.h  game_util.h  real_sensors_system.c
pi_escape/es/system/: action_system.c  action_system.h  activation_system.c  activation_system.h  animation_system.c  animation_system.h  camera_system.c  camera_system.h  component_structs.h  container_system.c  container_system.h  endlevel_system.c  endlevel_system.h  input_system.c  input_system.h  lock_system.c  lock_system.h  move_system.c  move_system.h  orientation_system.c  orientation_system.h  process_sensor_system.c  process_sensor_system.h  real_sensors_system.c  real_sensors_system.h  render_system.c  render_system.h
pi_escape/graphics/: PuzzleMVP.vertexshader  PuzzleMVP_nolight.vertexshader  PuzzleProcTex.fragmentshader  PuzzleProcTex_nolight.fragmentshader  arcade72.fnt  base72.fnt  gl_connector.c  gl_connector.h  gl_connector_center.c  gl_connector_center.h  gl_door.c  gl_door.h  gl_floor.c  gl_floor.h  gl_glyph.c  gl_glyph.h  gl_key.c  gl_key.h  gl_lock.c  gl_lock.h  gl_player.c  gl_player.h  gl_proctex_object.c  gl_proctex_object.h  gl_wall.c  gl_wall.h  globject.c  globject.h  hud.fragmentshader  hud.vertexshader  opengl_game_renderer.c  opengl_game_renderer.h  simple.fragmentshader  simple.vertexshader  zorque72.fnt
pi_escape/imu/: RTIMU_c_wrapper.cpp  RTIMU_c_wrapper.h
pi_escape/led/: TinyFont  fake_led.cpp  fake_led.h  ledcontrol.c  ledcontrol.h  sense_led.c  sense_led.h
pi_escape/level/: levelloader.c  levelloader.h
pi_escape/level/level_files/: game1.lvl  game2.lvl  game3.lvl  hdnw.lvl  tutorial1.lvl  tutorial2.lvl  tutorial3.lvl  tutorial4.lvl  tutorial5.lvl  tutorial6.lvl  tutorial7.lvl
pi_escape/sensor/: hts221.c  hts221.h  i2c.c  i2c.h  lps25h.c  lps25h.h
pi_escape2_benchmark.dir/Debug/pi_escap.34A68469.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pi_escape2_benchmark.lastbuildstate
pi_escape2_part1.dir/Debug/pi_escape2_part1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pi_escape2_part1_benchmark.dir/Debug/pi_escap.9C603BB4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog
pi_escape2_part2.dir/Debug/pi_escape2_part2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.write.1.tlog
pi_escape2_test.dir/Debug/pi_escape2_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
util/: lampenunix.h  lampenwindows.h  min_unit.c  min_unit.h  mythread.cpp  mythread.h  rgb_triple.h  sleep.c  sleep.h  threadable.h  util.c  util.h
